add the add class

--- a/01-webpack/public/index.html
+++ b/01-webpack/public/index.html
@@ -7,6 +7,14 @@
     <title>webpack_test</title>
 </head>
 <body>
+    <div id="root">
+        <div class="box"></div>
+        <span class="iconfont icon-qiyongyonghu"></span>
+        <span class="iconfont icon-jinyongyonghu"></span>
+        <span class="iconfont icon-zhongzhimima"></span>
+        <span class="iconfont icon-huanyuandefuben"></span>
+        <span class="iconfont icon-tianjia"></span>
+    </div>
     <script src="../build/js/main.js"></script>
 </body>
 </html>
