--- a/react_test/07_component_form/test.html
+++ b/react_test/07_component_form/test.html
@@ -1,22 +1,58 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <title>09_form</title>
 </head>
-<body>
-<div id="example"></div>
 
-<script type="text/javascript" src="../js/react.development.js"></script>
-<script type="text/javascript" src="../js/react-dom.development.js"></script>
-<script type="text/javascript" src="../js/babel.min.js"></script>
-<script type="text/babel">
-  /*
+<body>
+  <div id="example"></div>
+
+  <script type="text/javascript" src="../js/react.development.js"></script>
+  <script type="text/javascript" src="../js/react-dom.js"></script>
+  <script type="text/javascript" src="../js/babel.min.js"></script>
+  <script type="text/babel">
+    /*
   需求: 自定义包含表单的组件
     1. 界面如下所示
     2. 输入用户名密码后, 点击登陆提示输入信息
     3. 不提交表单
   */
+
+ // 非受控组件：通过 ref 的方式来自动收集表单数据的组件
+ // 定义类组件
+ class Form extends React.Component {
+   // 初始化状态
+   state = {
+     username: '',
+     password: ''
+   }
+   handleSubmit = (e) => {
+     e.preventDefault()
+     const {username, password} = this.state
+     console.log(`用户名：${username}  密码：${password}  `)
+   }
+   handleChange = (key) => {
+    return (e) => {
+      this.setState({
+        [key]: e.target.value.trim()
+      })
+    }
+   }
+   render(){
+     return <form onSubmit={this.handleSubmit}>
+      用户名:<input type="text" onChange={this.handleChange('username')}/>
+      密码：<input type="password" onChange={this.handleChange('password')}/>
+      <button>登录</button>
+      </form>
+   }
+ }
+
+ ReactDOM.render(<Form/>, document.getElementById('example'));
+
+
 </script>
 </body>
+
 </html>
