--- a/03-react/react_test/react/test.html
+++ b/03-react/react_test/react/test.html
@@ -14,9 +14,10 @@
   <script src="../js/react-dom.js"></script>
   <script src="../js/babel.min.js"></script>
   <script type="text/babel">
-    const h1 = <h1>Hello React</h1>;
-    console.log(h1);
-    ReactDOM.render(h1, document.getElementById('root'));
+    function MyComponent () {
+      return <h2>我是用函数定义的组件</h2>
+    }
+    ReactDOM.render(<MyComponent/>, document.getElementById('root'))
   </script>
 </body>
 </html>
