--- a/exercise/state.html
+++ b/exercise/state.html
@@ -15,12 +15,18 @@
     <script type="text/babel">
         // 1. 创建组件
         class Weather extends React.Component {
-            constructor () {
-                super()
+            constructor (props) {
+                super(props)
+                this.state = { isHot: false}
+                this.changeWeather = this.changeWeather.bind(this)
             }
             render () {
-                console.log(this);
+                const { isHot } = this.state
                 return <h1>今天天气很炎热</h1>
+            }
+            changeWeather() {
+                const isHot = this.state.isHot
+                this.state.isHot = !isHot
             }
         }
         // 2. 渲染
