--- a/vue练习/姓名案例/index computed方法.html
+++ b/vue练习/姓名案例/index computed方法.html
@@ -12,11 +12,11 @@
   <div id="root">
     姓：<input type="text" v-model="firstName"> <br>
     名：<input type="text" v-model="lastName"> <br>
-    <span>全名：{{getFullName()}}</span>
+    <span>全名：{{fullName}}</span>
   </div>
 
   <script>
-    new Vue({
+    const vm = new Vue({
       el: "#root",
       data: {
         firstName: "张",
@@ -24,7 +24,7 @@
       },
       computed: {
         fullName() {
-          return 
+          return this.firstName + "-" + this.lastName
         }
       }
     })
